# crewai_streamlit

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/srs2sdd/: SRS.docx  SRS.txt  app.py  crew.py  main.py
src/srs2sdd/config/: agents.yaml  tasks.yaml
src/srs2sdd/tools/: custom_tool.py
